--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 
+
 html {
     background: #fffff2;
     /* background: #FCF9E2; */
@@ -14,24 +15,20 @@ html {
 }
 
 nav {
-    position: absolute;
+    
+    position: fixed;
     right: 1rem;
-    top: 1rem;
     display: block;
     unicode-bidi: isolate;
-    font-size: 22px;
-  
 }
 
 
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  
-     
-  }
+    li {
+	    float: left;
+        font-size: 18px; 
+        padding: 2rem;
+        list-style-type: none;
+    }
 
 
 footer {
@@ -45,29 +42,56 @@ footer {
 }
 
 
+main-text   {
+    position: fixed;
+    text-align: justify;
+    text-align-last: center;
+}
 
 p {
     text-align: center;
     padding: 24rem;
-    font-size: 50px;
-   
+    font-size: 50px;  
   }
 
-  a {
+a {
     color:  #3f3e3e;
     text-decoration: none;
 }
   
 a:hover {
     color:#00A0C6; 
-    text-decoration: green wavy underline;
+    text-decoration: orange wavy underline;
     cursor:pointer;  
 }
 
-.horizontalline {
-    position: absolute; /*so I could use 'top: 30px' */
-    bottom: 40px;
-    width: 100%;
-    border-top:1px solid black;
+.horizontallinefooter {
+    border: none;                      /** <- Note this line */
+    border-top: 1px solid black;       /** <- And then this line */
+    color: rgb(0, 0, 0);
+    height: 1px;
+    width: 100%; 
 }
+
+
+.horizontallinetop{
+    border: none;                      /** <- Note this line */
+    color: rgb(0, 0, 0);
+    height: 1px;
+    width: 100%; 
+    border-bottom: 1px solid black;
+}
+
+
+
+
+.casaestrela   {
+    position: fixed;
+    text-align: left;
+    padding: 2rem;
+    top: 0;
+    z-index: 10; 
+    font-size: 18px;  
+}
+
 
